# transcript-search

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  app.py  build.sh  docker-compose.yml  make_pretty.sh  make_random.sh  pyproject.toml  script-download.pl  setup.py  stack.yaml  stargate-search.cabal  style.css  transcript-search.cabal
.github/workflows/: tests.yml
atl/: 1.01  1.03  1.04  1.05  1.06  1.07  1.08  1.09  1.10  1.11  1.12  1.13  1.14  1.15  1.16  1.17  1.18  1.19  1.20  2.01  2.02  2.03  2.04  2.05  2.06  2.07  2.08  2.09  2.10  2.11  3.01  3.02  3.03  3.04  3.05  3.06  3.07  3.08  3.09  3.10  (+49 more)
bench/: Parser.hs
cli/: Main.hs
data/: load_data.sh
exe/: Main.hs
lib/: Transcript.hs
lib/Data/: Stargate.hs
lib/Data/Stargate/: CSV.hs  Format.hs  IO.hs  JSON.hs  Markov.hs  Parse.hs  ParseTrek.hs  Search.hs
lib/Transcript/: Format.hs  IO.hs  JSON.hs  Markov.hs  PostgreSQL.hs
lib/Transcript/Parse/: Stargate.hs  Trek.hs
lib/Web/Stargate/: Data.hs  JSON.hs  Main.hs  Parse.hs  Search.hs
scripts/: sg_script_search
sg1/: .html  1.01  1.03  1.04  1.05  1.06  1.07  1.08  1.09  1.10  1.11  1.12  1.13  1.14  1.15  1.16  1.17  1.18  1.19  1.20  1.21  1.22  10.01  10.02  10.03  10.04  10.05  10.06  10.07  10.08  10.09  10.10  10.11  10.12  10.13  10.14  10.15  10.16  10.17  10.18  (+173 more)
sg_script_search/: __init__.py  views.py
sg_script_search/atl/: 1.01  1.03  1.04  1.05  1.06  1.07  1.08  1.10  1.11  1.14  1.15  1.16  1.17  1.19  2.01  2.03  2.04  2.05  2.06  2.08  2.09  3.01  3.02  3.05  3.07  3.08  3.09  3.10  3.11  3.13  3.14  3.17  3.19  4.01  4.02  4.03  4.04  4.06  4.10  4.11  (+16 more)
sg_script_search/json/atl/: 1.02.json  1.03.json  1.04.json  1.05.json  1.06.json  1.07.json  1.08.json  1.09.json  1.10.json  1.11.json  1.12.json  1.13.json  1.14.json  1.15.json  1.16.json  1.17.json  1.18.json  1.19.json  1.20.json  2.01.json  2.02.json  2.03.json  2.04.json  2.05.json  2.06.json  2.07.json  2.08.json  2.09.json  2.10.json  2.11.json  3.01.json  3.02.json  3.03.json  3.04.json  3.05.json  3.06.json  3.07.json  3.08.json  3.09.json  3.10.json  (+49 more)
sg_script_search/json/sg1/: 1.02.json  1.03.json  1.04.json  1.05.json  1.06.json  1.07.json  1.08.json  1.09.json  1.10.json  1.11.json  1.12.json  1.13.json  1.14.json  1.15.json  1.16.json  1.17.json  1.18.json  1.19.json  1.20.json  1.21.json  1.22.json  10.01.json  10.02.json  10.03.json  10.04.json  10.05.json  10.06.json  10.07.json  10.08.json  10.09.json  10.10.json  10.11.json  10.12.json  10.13.json  10.14.json  10.15.json  10.16.json  10.17.json  10.18.json  10.19.json  (+172 more)
sg_script_search/raw/atl/: 1.13  2.02  2.03  2.07  2.09  2.11  3.15  3.16  4.13  4.15  4.16  5.02  5.07  5.11  5.14
sg_script_search/raw/sg1/: 1.03  1.07  1.10  1.14  1.19  10.04  10.07  10.17  10.19  2.02  2.10  2.19  2.20  2.21  2.22  3.01  3.08  3.09  3.13  3.15  3.17  3.19  4.05  4.09  4.16  4.19  5.01  5.05  5.08  5.12  5.13  5.16  5.20  5.22  6.06  6.07  6.10  7.03  7.09  7.12  (+8 more)
sg_script_search/sg1/: 1.01  1.03  1.04  1.05  1.06  1.09  1.11  1.12  1.13  1.14  1.15  1.16  1.17  1.18  1.20  1.21  10.01  10.02  10.03  10.05  10.06  10.09  10.10  10.11  10.13  10.14  10.15  10.16  10.17  10.19  10.20  2.01  2.02  2.03  2.04  2.05  2.06  2.09  2.10  2.11  (+115 more)
sg_script_search/templates/: about.html  index.html  layout.html  results.html  transcript_index.html
templates/: about.html  advanced.html  index.html  layout.html  random.html  results.html  transcript.html  transcript_index.html
tests/: conftest.py  test_data_loading.py  test_routes.py  test_ui_playwright.py  test_units.py
tools/: check.pl  check.sh  deploy.sh  episode-names.pl  profile.sh  regen-json.sh  script-download.pl  scriptparse.hs  stress.sh
transcripts/: markov.py
transcripts/atl/: 1.02  1.03  1.04  1.05  1.06  1.07  1.08  1.09  1.10  1.11  1.12  1.13  1.14  1.15  1.16  1.17  1.18  1.19  1.20  2.01  2.02  2.03  2.04  2.05  2.06  2.07  2.08  2.09  2.10  2.11  2.12  2.13  2.14  2.15  2.16  2.17  2.18  2.19  2.20  3.01  (+59 more)
transcripts/ds9/: 401  403  404  405  406  407  408  409  410  411  412  413  414  415  416  417  418  419  420  421  422  423  424  425  426  427  428  429  430  431  432  433  434  435  436  437  438  439  440  441  (+133 more)
transcripts/ent/: 01  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  (+57 more)
transcripts/sg1/: 1.01  1.02  1.03  1.04  1.05  1.06  1.07  1.08  1.09  1.10  1.11  1.12  1.13  1.14  1.15  1.16  1.17  1.18  1.19  1.20  1.21  1.22  10.01  10.02  10.03  10.04  10.05  10.06  10.07  10.08  10.09  10.10  10.11  10.12  10.13  10.14  10.15  10.16  10.17  10.18  (+174 more)
transcripts/tng/: 101  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  130  131  132  133  134  135  136  137  138  139  140  141  (+136 more)
transcripts/tos/: 1  10  11  12  13  14  15  16  16b  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+40 more)
transcripts/voy/: 101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  201  202  203  204  205  206  207  208  209  210  211  212  213  214  215  216  217  218  219  220  221  (+120 more)
web/: ElasticSearch.hs  Main.hs  app.py  db.sql
web/pretty/atl/: 1.01  1.03  1.04  1.05  1.06  1.07  1.08  1.09  1.10  1.11  1.12  1.13  1.14  1.15  1.16  1.17  1.18  1.19  1.20  2.01  2.02  2.03  2.04  2.05  2.06  2.07  2.08  2.09  2.10  2.11  2.12  2.13  2.14  2.15  2.16  2.17  2.18  2.19  2.20  3.01  (+59 more)
web/pretty/ds9/: 401  403  404  405  406  407  408  409  410  411  412  413  414  415  416  417  418  419  420  421  422  423  424  425  426  427  428  429  430  431  432  433  434  435  436  437  438  439  440  441  (+133 more)
web/pretty/ent/: 01  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  (+79 more)
web/static/: style.css
web/templates/: about.html  advanced.html  index.html  layout.html  random.html  results.html  transcript.html  transcript_index.html
(+1130 files in other folders)
