name:          stargate-search
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          stargate-search-web
    hs-source-dirs: web
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , stargate-search
                  , scotty
                  , ginger
                  , filepath
                  , text
                  , containers
                  , unordered-containers
                  , Glob
                  , bytestring
                  , split
                  , vector
                  , transformers
                  , async
                  , word-wrap
                  , random
                  , text-show

library
    hs-source-dirs: lib
    exposed-modules: Data.Stargate
                   , Data.Stargate.Parse
                   , Data.Stargate.CSV
                   , Data.Stargate.Search
                   , Data.Stargate.IO
                   , Data.Stargate.JSON
                   , Data.Stargate.Markov
                   , Data.Stargate.Format
    build-depends: base   >= 4      && < 5
                 , filepath
                 , either-unwrap
                 , text
                 , containers
                 , unordered-containers
                 , Glob
                 , bytestring
                 , cassava
                 , split
                 , vector
                 , attoparsec
                 , aeson
                 , markov-chain
                 , random
                 , text-show


benchmark bench-parser
    type:           exitcode-stdio-1.0
    hs-source-dirs: bench
    main-is:        Parser.hs
    build-depends:  base   >= 4      && < 5
                  , stargate-search
                  , filepath
                  , either-unwrap
                  , text
                  , containers
                  , unordered-containers
                  , Glob
                  , bytestring
                  , split
                  , vector
                  , criterion
                  , deepseq
    ghc-options:  -Wall -threaded -O2