name:          stargate-search
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          stargate-search-web
    hs-source-dirs: web
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , stargate-search
                  , scotty
                  , ginger
                  , filepath
                  , text
                  , containers
                  , unordered-containers
                  , Glob
                  , bytestring
                  , split
                  , vector
                  , transformers
                  , async
                  , word-wrap
                  , random
                  , text-show

executable          stargate-parse
    hs-source-dirs: cli
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2
    build-depends:  base   >= 4      && < 5
                  , stargate-search
                  , text
                  , text-show

library
    hs-source-dirs: lib
    exposed-modules: Data.Stargate
                   , Data.Stargate.Parse
                   , Data.Stargate.Search
                   , Data.Stargate.IO
                   , Data.Stargate.Markov
                   , Data.Stargate.Format
    build-depends: base   >= 4      && < 5
                 , filepath
                 , either-unwrap
                 , text
                 , containers
                 , unordered-containers
                 , Glob
                 , bytestring
                 , cassava
                 , split
                 , vector
                 , attoparsec
                 , aeson
                 , random
                 , text-show
                 , transformers
                 , hashable
