name:          transcript-search
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          transcript-search-web
    hs-source-dirs: web
    main-is:        Main.hs
    other-modules:  ElasticSearch
    ghc-options:    -Wall -threaded -O2
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , transcript-search
                  , scotty
                  , ginger
                  , filepath
                  , text
                  , containers
                  , unordered-containers
                  , Glob
                  , bytestring
                  , split
                  , vector
                  , transformers
                  , async
                  , word-wrap
                  , random
                  , text-show
                  , aeson
                  , http-conduit
                  , uri-encode
                  , http-types
                  , directory

executable          transcript-parse
    hs-source-dirs: cli
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2
    build-depends:  base   >= 4      && < 5
                  , transcript-search
                  , text
                  , text-show
                  , bytestring

library
    hs-source-dirs: lib
    exposed-modules: Transcript
                   , Transcript.Parse.Stargate
                   , Transcript.Parse.Trek
                   , Transcript.IO
                   , Transcript.Markov
                   , Transcript.Format
                   , Transcript.JSON
    build-depends: base   >= 4      && < 5
                 , filepath
                 , either-unwrap
                 , text
                 , containers
                 , unordered-containers
                 , Glob
                 , bytestring
                 , cassava
                 , split
                 , vector
                 , attoparsec
                 , aeson
                 , random
                 , text-show
                 , transformers
                 , hashable
